--- a/AttendanceSystem/AttendanceSystem.csproj
+++ b/AttendanceSystem/AttendanceSystem.csproj
@@ -68,10 +68,11 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="PasswordGeneration\IPasswordInfo.cs" />
-    <Compile Include="PasswordGeneration\PasswordGen.cs" />
+    <Compile Include="PasswordProccessing\IPasswordInfo.cs" />
+    <Compile Include="PasswordProccessing\Password.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="LoginWindow.resx">
       <DependentUpon>LoginWindow.cs</DependentUpon>
     </EmbeddedResource>
