changed password and name checking

--- a/AttendanceSystem/AttendanceSystem.csproj
+++ b/AttendanceSystem/AttendanceSystem.csproj
@@ -117,5 +117,8 @@
       <Name>AttendanceLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataValidation\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
